client section added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,25 @@
 </section>
 <!--work section ENDS-->
 
+<!--testimonial-->
+<section class="client">
+    <h2 class=" first-color custom-font">My clients saying</h2>
+    <div class="client-demo">
+        <div class="client-section">
+            <img src="assets/images/client.png" alt="">
+            <h3>John Doe</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde minima distinctio, odio aliquam commodi quaerat expedita alias.</p>
+        </div>
+        <div class="client-section">
+            <img src="assets/images/client.png" alt="">
+            <h3>John Doe</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde minima distinctio, odio aliquam commodi quaerat expedita alias.</p>
+        </div>
+       
+        </div>
+</section>
+<!--testimonial ends-->
+
 <!--chat section-->
 <section class="contact-box">
     <div >
